--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,10 @@ var/
 pip-log.txt
 pip-delete-this-directory.txt
 
+#gcloud
+google-cloud-sdk-269.0.0-linux-x86_64.tar.gz
+google-cloud-sdk/
+
 # Unit test / coverage reports
 htmlcov/
 .tox/
