--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,8 @@ pip-delete-this-directory.txt
 google-cloud-sdk-269.0.0-linux-x86_64.tar.gz
 google-cloud-sdk/
 data/
+results/
+
 # Unit test / coverage reports
 htmlcov/
 .tox/
